# deep-research-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  improvement-plan.md  pyproject.toml  report-example.md  research-context.md
.github/skills/deep-research-agent-compose/: SKILL.md
.github/skills/deep-research-agent-compose/references/: workflow.md
deep-research-agent/frontend/: index.html  manifest.webmanifest  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
deep-research-agent/frontend/src/: App.vue  types.ts
deep-research-agent/frontend/src/components/common/: MarkdownRenderer.vue  ProgressBar.vue  StatusPill.vue
deep-research-agent/frontend/src/components/research/: ApprovalBox.vue  LiveFeedPanel.vue  QueryForm.vue  ReportPanel.vue  SourcesPanel.vue  TasksPanel.vue  TimelinePanel.vue
deep-research-agent/frontend/src/composables/: useApi.ts  useSseConnection.ts
deep-research-agent/frontend/src/router/: index.ts
deep-research-agent/frontend/src/services/: api.ts
deep-research-agent/frontend/src/stores/: useResearchStore.ts  useSettingsStore.ts
deep-research-agent/frontend/src/styles/: main.css  typography.css
deep-research-agent/frontend/src/views/: ResearchView.vue  SettingsView.vue
docs/: implementation.html
plans/: vue-pwa-frontend-plan.md
scripts/: compose-agent.sh  host-llamacpp-agent.sh  host-llamacpp-web.sh
src/deep_research_agent/: __main__.py  cli.py  settings.py
src/deep_research_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/deep_research_agent/domain/: models.py  state.py
src/deep_research_agent/persistence/: backends.py
src/deep_research_agent/runtime/: events.py  graph.py  placeholders.py  service.py
src/deep_research_agent/services/: __init__.py  extraction.py  llm.py  reporting.py  search.py
src/deep_research_agent/web/: __init__.py  __main__.py  app.py  ui.py
tests/: support.py  test_cli.py  test_compose_integration.py  test_persistence.py  test_project_assets.py  test_report_formatting.py  test_runtime_flow.py  test_services.py  test_settings.py  test_state.py  test_web_app.py
